package main

import (
	"context"
	"fmt"
	"os"
	"time"

	"github.com/brianvoe/gofakeit/v7"
	"github.com/google/uuid"
	"github.com/joho/godotenv"
	"go.mongodb.org/mongo-driver/mongo"
	"go.mongodb.org/mongo-driver/mongo/options"
	"go.uber.org/zap"

	"github.com/linemk/rocket-shop/inventory/internal/entyties/models"
	"github.com/linemk/rocket-shop/platform/pkg/logger"
	inventory_v1 "github.com/linemk/rocket-shop/shared/pkg/proto/inventory/v1"
)

func main() {
	ctx := context.Background()

	// –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º –ª–æ–≥–≥–µ—Ä
	if err := logger.Init(ctx, "info", false, false, "", "inventory-seed"); err != nil {
		panic(err)
	}
	defer func() {
		_ = logger.Close(ctx) //nolint:gosec // best-effort shutdown
		_ = logger.Sync()     //nolint:gosec // best-effort shutdown
	}()

	if err := run(ctx); err != nil {
		logger.Fatal(ctx, "–û—à–∏–±–∫–∞ –≤—ã–ø–æ–ª–Ω–µ–Ω–∏—è", zap.Error(err))
	}
}

func run(ctx context.Context) error {
	// –ó–∞–≥—Ä—É–∂–∞–µ–º .env —Ñ–∞–π–ª (–∏–≥–Ω–æ—Ä–∏—Ä—É–µ–º –æ—à–∏–±–∫—É, —Ç.–∫. —Ñ–∞–π–ª –º–æ–∂–µ—Ç –æ—Ç—Å—É—Ç—Å—Ç–≤–æ–≤–∞—Ç—å –≤ CI)
	//nolint:gosec,errcheck
	_ = godotenv.Load("deploy/compose/inventory/.env")

	// –ü–æ–ª—É—á–∞–µ–º –ø–∞—Ä–∞–º–µ—Ç—Ä—ã –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è –∏–∑ –æ–∫—Ä—É–∂–µ–Ω–∏—è
	mongoUser := os.Getenv("INVENTORY_MONGO_USER")
	if mongoUser == "" {
		mongoUser = "inventory_user"
	}

	mongoPassword := os.Getenv("INVENTORY_MONGO_PASSWORD")
	if mongoPassword == "" {
		mongoPassword = "inventory_password"
	}

	mongoPort := os.Getenv("INVENTORY_MONGO_PORT")
	if mongoPort == "" {
		mongoPort = "27017"
	}

	mongoDatabase := os.Getenv("INVENTORY_MONGO_DB")
	if mongoDatabase == "" {
		mongoDatabase = "inventory_db"
	}

	// –§–æ—Ä–º–∏—Ä—É–µ–º URI –¥–ª—è –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è –∫ localhost (–¥–ª—è dev –æ–∫—Ä—É–∂–µ–Ω–∏—è)
	mongoURI := fmt.Sprintf("mongodb://%s:%s@localhost:%s/%s?authSource=admin",
		mongoUser, mongoPassword, mongoPort, mongoDatabase)

	opCtx, cancel := context.WithTimeout(ctx, 30*time.Second)
	defer cancel()

	// –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ MongoDB
	client, err := mongo.Connect(opCtx, options.Client().ApplyURI(mongoURI))
	if err != nil {
		return fmt.Errorf("–Ω–µ —É–¥–∞–ª–æ—Å—å –ø–æ–¥–∫–ª—é—á–∏—Ç—å—Å—è –∫ MongoDB: %w", err)
	}
	defer func() {
		disconnectCtx, cancel := context.WithTimeout(context.WithoutCancel(ctx), 5*time.Second)
		defer cancel()
		if err := client.Disconnect(disconnectCtx); err != nil {
			logger.Error(ctx, "–û—à–∏–±–∫–∞ –ø—Ä–∏ –æ—Ç–∫–ª—é—á–µ–Ω–∏–∏ –æ—Ç MongoDB", zap.Error(err))
		}
	}()

	// –ü—Ä–æ–≤–µ—Ä—è–µ–º –ø–æ–¥–∫–ª—é—á–µ–Ω–∏–µ
	if err := client.Ping(opCtx, nil); err != nil {
		return fmt.Errorf("–Ω–µ —É–¥–∞–ª–æ—Å—å –ø—Ä–æ–≤–µ—Ä–∏—Ç—å –ø–æ–¥–∫–ª—é—á–µ–Ω–∏–µ –∫ MongoDB: %w", err)
	}

	collection := client.Database(mongoDatabase).Collection("parts")

	// –°–æ–∑–¥–∞–µ–º —Ç–µ—Å—Ç–æ–≤—ã–µ –¥–µ—Ç–∞–ª–∏
	parts := generateParts(10)

	logger.Info(ctx, "üå± –ó–∞–ø–æ–ª–Ω—è–µ–º –±–∞–∑—É –¥–∞–Ω–Ω—ã—Ö —Ç–µ—Å—Ç–æ–≤—ã–º–∏ –¥–µ—Ç–∞–ª—è–º–∏", zap.Int("count", len(parts)))

	for i, part := range parts {
		_, err := collection.InsertOne(opCtx, part)
		if err != nil {
			logger.Error(ctx, "‚ö†Ô∏è  –û—à–∏–±–∫–∞ –ø—Ä–∏ –≤—Å—Ç–∞–≤–∫–µ –¥–µ—Ç–∞–ª–∏", zap.Int("index", i+1), zap.Error(err))
			continue
		}
		logger.Info(ctx, "‚úÖ –°–æ–∑–¥–∞–Ω–∞ –¥–µ—Ç–∞–ª—å", zap.Int("index", i+1), zap.Int("total", len(parts)), zap.String("name", part.Name), zap.String("uuid", part.UUID))
	}

	logger.Info(ctx, "üéâ –ë–∞–∑–∞ –¥–∞–Ω–Ω—ã—Ö —É—Å–ø–µ—à–Ω–æ –∑–∞–ø–æ–ª–Ω–µ–Ω–∞!")
	return nil
}

func generateParts(count int) []models.Part {
	parts := make([]models.Part, 0, count)
	now := time.Now()

	categories := []inventory_v1.Category{
		inventory_v1.Category_CATEGORY_ENGINE,
		inventory_v1.Category_CATEGORY_FUEL,
		inventory_v1.Category_CATEGORY_PORTHOLE,
		inventory_v1.Category_CATEGORY_WING,
	}

	partNames := []string{
		"Quantum Engine X-3000",
		"Fusion Reactor Core",
		"Titanium Wing Panel",
		"Reinforced Porthole",
		"Plasma Fuel Tank",
		"Ion Thruster Assembly",
		"Carbon Fiber Wing",
		"Armored Viewport",
		"Hyperdrive Fuel Cell",
		"Warp Drive Engine",
	}

	for i := 0; i < count; i++ {
		category := categories[i%len(categories)]
		name := partNames[i%len(partNames)]
		if i >= len(partNames) {
			name = fmt.Sprintf("%s Mark-%d", name, i/len(partNames)+1)
		}

		parts = append(parts, models.Part{
			UUID:          uuid.New().String(),
			Name:          name,
			Description:   gofakeit.Sentence(15),
			Price:         gofakeit.Float64Range(100, 50000),
			StockQuantity: int64(gofakeit.IntRange(10, 500)),
			Category:      category,
			Dimensions: &models.Dimensions{
				Length: gofakeit.Float64Range(10, 300),
				Width:  gofakeit.Float64Range(10, 200),
				Height: gofakeit.Float64Range(10, 150),
				Weight: gofakeit.Float64Range(5, 1000),
			},
			Manufacturer: &models.Manufacturer{
				Name:    gofakeit.Company(),
				Country: gofakeit.Country(),
				Website: gofakeit.URL(),
			},
			Tags: []string{
				gofakeit.Word(),
				gofakeit.Word(),
				"spaceship",
			},
			Metadata:  map[string]interface{}{"generated": true, "version": "1.0"},
			CreatedAt: now,
			UpdatedAt: now,
		})
	}

	return parts
}
